Feat: 파일 업로드 실패, 푸시를 위한 커밋

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -47,6 +47,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.18.2'
+
+    //minio
+    implementation 'io.minio:minio:8.5.17'
 }
 
 test {
