--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -29,3 +29,9 @@ spring:
     redis:
       host: localhost
       port: 6379
+
+minio:
+  url: "http://localhost:9000"
+  accessKey: "minio"
+  secretKey: "minio123"
+  bucketName: "chat-files"
